--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,10 @@
 <resources>
     <string name="app_name">Xposed-DataUsage</string>
     <string name="display">Display Settings</string>
-    <string name="show_as">Show as</string>
-    <string name="show_as_summary">Show As (summary)</string>
 
-    <array name="show_as_entries">
-        <item>Smart SI</item>
-        <item>Smart Metric</item>
-    </array>
+    <string name="units">Units</string>
+    <string name="units_summary">The units to use to format the data</string>
+
+    <string name="decimal_places">Decimal places</string>
+    <string name="decimal_places_summary">The number of decimal places to use</string>
 </resources>
