--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Xposed-DataUsage</string>
     <string name="display">Display Settings</string>
+    <string name="action_settings_changed_suffix">.settings_changed</string>
 
     <string name="units">Units</string>
     <string name="units_summary">The units to use to format the data</string>
