--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Xposed-DataUsage</string>
     <string name="action_settings_updated">xposeddatausage.action.SETTINGS_CHANGED</string>
-    <string name="action_settings_update_request">xposeddatausage.action.SETTINGS_UPDATE_REQUEST</string>
+    <string name="module_prefs_cache_name">io.github.francoiscampbell.xposeddatausage.Module_preferences</string>
 
 </resources>
